# chat_gpt_clone

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  start_ollama.sh
static/: app.js  dashboard.css  index.html  login.css  login.html  login.js  loginerror.html  register.html  register.js  style.css
templates/: chat_list.html  chat_page.html
